--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #270e63;
+  color: #ffffff;
+}
+
+.text-stroke-gradient {
+  font-size: 2.5rem;
+  font-family: "Oswald", sans-serif;
+  background: white;
+  background-clip: padding-box;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: white;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  -webkit-text-stroke: 20px
+    linear-gradient(90deg, #1ce4a1, #e431ff, #1ce4a1, #e431ff, #1ce4a1);
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  font-family: "Bungee";
+}
+
+/* create gradient borders using pseudo element */
+.gradient-border {
+  position: relative;
+  z-index: 1;
+  /* border: 1px solid blue; */
+  padding: 1px;
+  background: #000;
+}
+
+.gradient-border::before {
+  content: "";
+  position: absolute;
+  inset: 0px;
+  z-index: -1;
+  background: linear-gradient(90deg, #1ce4a1, #e431ff);
+  border-radius: inherit;
+}
+
+.gradient-border::after {
+  content: "";
+  position: absolute;
+  inset: 2px;
+  z-index: 1;
+  background: inherit;
+  border-radius: inherit;
+}
