--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Otomanopee+One:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@500;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Orienta:wght@400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  background-color: #270e63;
+  background-color: #17082f;
   color: #ffffff;
 }
 
@@ -55,4 +56,12 @@ body {
   z-index: 1;
   background: inherit;
   border-radius: inherit;
+}
+
+@layer utilities {
+  input[type="number"].hide-arrow::-webkit-inner-spin-button,
+  input[type="number"].hide-arrow::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
